--- a/0-source/_theme-properties.scss
+++ b/0-source/_theme-properties.scss
@@ -1,3 +1,3 @@
 html {
-    --skypecord-titlebar-text: 'Skypecord v0.2 Beta'
+    --skypecord-titlebar-text: 'Skypecord v0.2.1 Beta'
 }
